--- a/README.rdoc
+++ b/README.rdoc
@@ -54,6 +54,31 @@ option:
   larch --from imaps://mail.example.com --to imaps://imap.gmail.com \
     --from-folder "Sent Mail" --to-folder "Sent Mail" --no-create-folder
 
+== Server Support
+
+Larch should work well with any server that properly supports
+IMAP4rev1[http://tools.ietf.org/html/rfc3501], and does its best to get along
+with servers that have buggy, unreliable, or incomplete IMAP implementations.
+
+Larch has been tested on and is known to work well with the following IMAP
+servers:
+
+* Dovecot
+* Gmail
+* Microsoft Exchange 2003
+
+== Known Issues
+
+Larch uses Ruby's Net::IMAP standard library for all IMAP operations. While
+Net::IMAP is generally a very solid library, it contains a bug that can cause a
+deadlock to occur if a connection drops unexpectedly (either due to network
+issues or because the server closed the connection without warning) when the
+server has already begun sending a response and Net::IMAP is waiting to receive
+more data.
+
+If this happens, Net::IMAP will continue waiting forever without passing control
+back to Larch, and you will need to manually kill and restart Larch.
+
 == Credit
 
 The Larch::IMAP class borrows heavily from Sup[http://sup.rubyforge.org] by
