--- a/README.rdoc
+++ b/README.rdoc
@@ -8,7 +8,7 @@ Larch is particularly well-suited for copying email to, from, or between Gmail
 accounts.
 
 *Author*::    Ryan Grove (mailto:ryan@wonko.com)
-*Version*::   1.0.0 (2009-03-17)
+*Version*::   ? (?)
 *Copyright*:: Copyright (c) 2009 Ryan Grove. All rights reserved.
 *License*::   GPL 2.0 (http://opensource.org/licenses/gpl-2.0.php)
 *Website*::   http://github.com/rgrove/larch
@@ -20,6 +20,45 @@ Install Larch via RubyGems:
   gem install larch
 
 == Usage
+
+  larch --from <uri> --to <uri> [options]
+
+  Required:
+       --from, -f <s>:   URI of the source IMAP server.
+         --to, -t <s>:   URI of the destination IMAP server.
+
+  Copy Options:
+                --all:   Copy all folders recursively
+     --all-subscribed:   Copy all subscribed folders recursively
+       --exclude <s+>:   List of mailbox names/patterns that shouldn't be
+                         copied
+   --exclude-file <s>:   Filename containing mailbox names/patterns that
+                         shouldn't be copied
+    --from-folder <s>:   Source folder to copy from (default: INBOX)
+      --from-pass <s>:   Source server password (default: prompt)
+      --from-user <s>:   Source server username (default: prompt)
+      --to-folder <s>:   Destination folder to copy to (default: INBOX)
+        --to-pass <s>:   Destination server password (default: prompt)
+        --to-user <s>:   Destination server username (default: prompt)
+
+  General Options:
+        --dry-run, -n:   Don't actually make any changes.
+          --fast-scan:   Use a faster (but less accurate) method to scan
+                         mailboxes. This may result in messages being
+                         re-copied.
+    --max-retries <i>:   Maximum number of times to retry after a recoverable
+                         error (default: 3)
+   --no-create-folder:   Don't create destination folders that don't already
+                         exist
+      --ssl-certs <s>:   Path to a trusted certificate bundle to use to
+                         verify server SSL certificates
+         --ssl-verify:   Verify server SSL certificates
+  --verbosity, -V <s>:   Output verbosity: debug, info, warn, error, or fatal
+                         (default: info)
+        --version, -v:   Print version and exit
+           --help, -h:   Show this message
+
+== Examples
 
 Larch is run from the command line. At a minimum, you must specify a source
 server and a destination server in the form of IMAP URIs. You may also specify
@@ -37,22 +76,45 @@ the necessary usernames and passwords, then sync the contents of the source's
 
   larch --from imap://mail.example.com --to imap://imap.gmail.com
 
-To connect using SSL, specify a URI beginning with <tt>imaps://</tt>:
+To <b>connect using SSL</b>, specify a URI beginning with <tt>imaps://</tt>:
 
   larch --from imaps://mail.example.com --to imaps://imap.gmail.com
 
-If you'd like to sync a folder other than +INBOX+, specify the source and
-destination folders using <tt>--from-folder</tt> and <tt>--to-folder</tt>:
+If you'd like to <b>sync a specific folder</b> other than +INBOX+, specify the
+source and destination folders using <tt>--from-folder</tt> and
+<tt>--to-folder</tt>:
 
   larch --from imaps://mail.example.com --to imaps://imap.gmail.com \
     --from-folder "Sent Mail" --to-folder "Sent Mail"
 
-By default Larch will create the specified folder if it doesn't already exist on
-the destination server. To prevent this, add the <tt>--no-create-folder</tt>
+To <b>sync all folders</b>, use the <tt>--all</tt> option (or
+<tt>--all-subscribed</tt> if you only want to <b>sync subscribed folders</b>):
+
+  larch --from imaps://mail.example.com --to imaps://imap.gmail.com --all
+
+By default Larch will create folders on the destination server if they don't
+already exist. To prevent this, add the <tt>--no-create-folder</tt> option:
+
+  larch --from imaps://mail.example.com --to imaps://imap.gmail.com --all \
+    --no-create-folder
+
+You can <b>prevent Larch from syncing one or more folders</b> by using the
+<tt>--exclude</tt> option:
+
+  larch --from imaps://mail.example.com --to imaps://imap.gmail.com --all \
+    --exclude Spam Trash Drafts "[Gmail]/*"
+
+If your exclusion list is long or complex, create a text file with one exclusion
+pattern per line and tell Larch to load it with the <tt>--exclude-file</tt>
 option:
 
-  larch --from imaps://mail.example.com --to imaps://imap.gmail.com \
-    --from-folder "Sent Mail" --to-folder "Sent Mail" --no-create-folder
+  larch --from imaps://mail.example.com --to imaps://imap.gmail.com --all \
+    --exclude-file exclude.txt
+
+The wildcard characters <tt>*</tt> and <tt>?</tt> are supported in exclusion
+lists. You can also use a regular expression by enclosing a pattern in
+forward slashes, so the previous example could be achieved with the
+pattern <tt>/(Spam|Trash|Drafts|\[Gmail\]\/.*)/</tt>
 
 == Server Compatibility
 
@@ -69,15 +131,22 @@ servers:
 
 == Known Issues
 
-Larch uses Ruby's Net::IMAP standard library for all IMAP operations. While
-Net::IMAP is generally a very solid library, it contains a bug that can cause a
-deadlock to occur if a connection drops unexpectedly (either due to network
-issues or because the server closed the connection without warning) when the
-server has already begun sending a response and Net::IMAP is waiting to receive
-more data.
+* Larch uses Ruby's Net::IMAP standard library for all IMAP operations. While
+  Net::IMAP is generally a very solid library, it contains a bug that can
+  cause a deadlock to occur if a connection drops unexpectedly (either due to
+  network issues or because the server closed the connection without warning)
+  when the server has already begun sending a response and Net::IMAP is
+  waiting to receive more data.
 
-If this happens, Net::IMAP will continue waiting forever without passing control
-back to Larch, and you will need to manually kill and restart Larch.
+  If this happens, Net::IMAP will continue waiting forever without passing
+  control back to Larch, and you will need to manually kill and restart Larch.
+
+* The Ruby package on Debian, Ubuntu, and some other Debian-based Linux
+  distributions doesn't include the OpenSSL standard library. If you see an
+  error like <tt>uninitialized constant Larch::IMAP::OpenSSL (NameError)</tt>
+  when running Larch, you may need to install the <tt>libopenssl-ruby</tt>
+  package. Please feel free to complain to the maintainer of your distribution's
+  Ruby packages.
 
 == Support
 
