Monkeypatch to handle bogus response from Exchange STATUS command that has a trailing space.
C: RUBY0006 STATUS "Deleted Items" (MESSAGES UIDNEXT UIDVALIDITY)
S: * STATUS "Deleted Items" (MESSAGES 768 UIDNEXT 809 UIDVALIDITY 3193)
@str: "* STATUS \"Deleted Items\" (MESSAGES 768 UIDNEXT 809 UIDVALIDITY 3193) \r\n"
@pos: 69
@lex_state: EXPR_BEG
@token.symbol: SPACE
@token.value: " "
^C[14:14:25] [fatal] Interrupted (SIGTERM)

Signed-off-by: Ryan Grove <ryan@wonko.com>

--- a/HISTORY
+++ b/HISTORY
@@ -40,6 +40,8 @@ Version 1.1.0 (git)
   * Fixed an issue when trying to copy a folder with leading or trailing
     whitespace in the name to Gmail, since Gmail doesn't allow whitespace around
     folder names.
+  * Fixed an issue with bogus Exchange STATUS responses containing trailing
+    spaces.
 
 Version 1.0.2 (2009-08-05)
   * Fixed a bug that caused Larch to try to set the read-only \Recent flag on
