--- a/README.rdoc
+++ b/README.rdoc
@@ -330,6 +330,7 @@ The following lovely people have contributed code to Larch:
 
 * Ryan Grove <ryan@wonko.com>
 * Andrew Hobson <ahobson@damballa.com>
+* Edgardo Hames <ehames@gmail.com>
 
 == Credit
 
